--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     
+    <div>
+        <h2>Weekly Workout Streak</h2>
+        <ul>
+            <li><img src="streakDone.png"></li>
+            <li><img src="streakDone.png"></li>
+            <li><img src="streakNone.png"></li>
+            <li><img src="streakNone.png"></li>
+            <li><img src="streakNone.png"></li>
+            <li><img src="streakNone.png"></li>
+            <li><img src="streakNone.png"></li>
+        </ul>
+    </div>
+
 </body>
 </html>
