--- a/tips.html
+++ b/tips.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <head>
     <title> Tips! </title>
+    <link href = "tips.css" rel = stylesheet>
 </head>
 <body>
+    <div class = "div1">
+        <img class="potato" src="mascot.png" alt="mascot"></a>
+        <h3>Homepage</h3>
+      </div>
+  
+      <div class = "div2">
+        <!-- INSERT <a href = "./link.html"> -->
+        <h3>Workout Log</h3>
+      </div>
+      
+      <div class = "div3">
+        <!-- INSERT <a href = "./link.html"> -->
+        <h3>Workout Maker</h3>
+      </div>
+  
+      <div class = "div4">
+        <!-- INSERT <a href = "./link.html"> -->
+        <h3>Helpful Links</h3>
+      </div>
+
+    <div class = "workoutHeader">
     <h1>
-        Here are some workout tips. 
+        Here are some workout tips to perfect your form!
     </h1>
-    <h2> 
-    put tips here i guess
-    </h2>
-</body>
+    </div>
+
+    <div class = "workoutTips">
+    <h3> 
+        tips go here
+    </h3>
+    </div>
+    
+    <img src = "pushup.jpg" alt = "The perfect pushup form!" height = "500" width = "700">
