--- a/tips.html
+++ b/tips.html
@@ -3,37 +3,25 @@
     <title> Tips! </title>
     <link href = "tips.css" rel = stylesheet>
 </head>
+<style>
+  .square {
+    height: 50px;
+    width: 50px;
+    background-color: rgb(63, 63, 202);
+  }
+</style>
 <body>
-    <div class = "div1">
-        <img class="potato" src="mascot.png" alt="mascot"></a>
-        <h3>Homepage</h3>
-      </div>
   
-      <div class = "div2">
-        <!-- INSERT <a href = "./link.html"> -->
-        <h3>Workout Log</h3>
-      </div>
+  <div>
+    <ul class="navbar">
       
-      <div class = "div3">
-        <!-- INSERT <a href = "./link.html"> -->
-        <h3>Workout Maker</h3>
-      </div>
+      <li class="div1">Homepage</li>
+      <li class="div2">Workout Log</li>
+      <li class="div3">Workout Generator</li>
+      <li class="div4">Helpful Links</li>
   
-      <div class = "div4">
-        <!-- INSERT <a href = "./link.html"> -->
-        <h3>Helpful Links</h3>
-      </div>
+    </ul>
+    <a href="./homepage.html"><img class="potato" src="mascot.png" style="width:80px; height:73px;"></a>
+  </div>
 
-    <div class = "workoutHeader">
-    <h1>
-        Here are some workout tips to perfect your form!
-    </h1>
-    </div>
-
-    <div class = "workoutTips">
-    <h3> 
-        tips go here
-    </h3>
-    </div>
     
-    <img src = "pushup.jpg" alt = "The perfect pushup form!" height = "500" width = "700">
