--- a/taskbar.html
+++ b/taskbar.html
@@ -20,7 +20,7 @@
         <li class="div1">Homepage</li>
         <li class="div2">Workout Log</li>
         <li class="div3">Workout Generator</li>
-        <li class="div4">Helpful Links</li>
+        <li class="div4"><a href = tips.html class="barButton">Workout Links</a></li>
     
       </ul>
       <a href="./homepage.html"><img class="potato" src="mascot.png" style="width:80px; height:73px;"></a>
