--- a/taskbar.html
+++ b/taskbar.html
@@ -17,9 +17,9 @@
     <div>
       <ul class="navbar">
         
-        <li class="div1">Homepage</li>
-        <li class="div2">Workout Log</li>
-        <li class="div3">Workout Generator</li>
+        <li class="div1"><a href = index.html class = "barButton">Homepage</a></li>
+        <li class="div2"><a href = workoutLog.html class = "barButton"> Workout Log</a></li>
+        <li class="div3"><a href = workoutGenerator.html class = "barButton">Workout Generator</a></a></li>
         <li class="div4"><a href = tips.html class="barButton">Workout Links</a></li>
     
       </ul>
