--- a/tips.html
+++ b/tips.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <head>
+   <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Tips! </title>
     <link href = "tips.css" rel = stylesheet>
 </head>
@@ -15,13 +17,14 @@
   <div>
     <ul class="navbar">
       
-      <li class="div1">Homepage</li>
-      <li class="div2">Workout Log</li>
-      <li class="div3">Workout Generator</li>
-      <li class="div4">Helpful Links</li>
+      <li class="div1"><a href = index.html class = "barButton">Homepage</a></li>
+      <li class="div2"><a href = workoutLog.html class = "barButton"> Workout Log</a></li>
+      <li class="div3"><a href = workoutGenerator.html class = "barButton">Workout Generator</a></a></li>
+      <li class="div4"><a href = tips.html class="barButton">Workout Links</a></li>
   
     </ul>
     <a href="./homepage.html"><img class="potato" src="mascot.png" style="width:80px; height:73px;"></a>
   </div>
 
+</body>
     
