--- a/workoutLog.html
+++ b/workoutLog.html
@@ -27,5 +27,21 @@
       <a href="./homepage.html"><img class="potato" src="mascot.png" style="width:80px; height:73px;"></a>
     </div>
 
+    <div>
+        <!-- Group, Exercise, Weight, Reps, Sets -->
+        <h3>
+            
+            <table style = "width:100%">
+            <tr>
+                <th>Group</th>
+                <th>Exercise</th>
+                <th>Weight</th>
+                <th>Reps</th>
+                <th>Sets</th>
+            </tr>
+            </table>
+        </h3>
+    </div>
+
   </body>
 </html>
