--- a/workoutLog.html
+++ b/workoutLog.html
@@ -39,6 +39,12 @@
                 <th>Reps</th>
                 <th>Sets</th>
             </tr>
+            <tr>
+                <th>TestOne</th>
+                <th>TestTwo</th>
+                <th>TestThree</th>
+                <th>TestFour</th>
+            </tr>
             </table>
         </h3>
     </div>
