--- a/tips.html
+++ b/tips.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href = "taskbar.css" rel = stylesheet>
+    <link href = "tips.css" rel = stylesheet>
 
 </head>
 <body>
@@ -18,8 +19,9 @@
       
         </ul>
         <a href="./homepage.html"><img class="potato" src="mascot.png" style="width:80px; height:73px;"></a>
-      </div>
-      <h3>Bench Press</h3>
+    </div>
+
+    <h3>Bench Press</h3>
       
 </body>
 </html>
