pls no merge conflict i beg mihoyo

--- a/workoutLog.html
+++ b/workoutLog.html
@@ -26,28 +26,11 @@
       </ul>
       <a href="./homepage.html"><img class="potato" src="mascot.png" style="width:80px; height:73px;"></a>
     </div>
-
-    <div>
-        <!-- Group, Exercise, Weight, Reps, Sets -->
-        <h3>
-            
-            <table style = "width:100%">
-            <tr>
-                <th>Group</th>
-                <th>Exercise</th>
-                <th>Weight</th>
-                <th>Reps</th>
-                <th>Sets</th>
-            </tr>
-            <tr>
-                <th>TestOne</th>
-                <th>TestTwo</th>
-                <th>TestThree</th>
-                <th>TestFour</th>
-            </tr>
-            </table>
-        </h3>
+    <div class = "listOfWorkouts">
+        <h2>Workout One</h2>
+        <h2>Workout Two</h2>
+        <h2>Workout Three</h2>
     </div>
-
+    
   </body>
 </html>
