--- a/tips.html
+++ b/tips.html
@@ -21,7 +21,11 @@
         <a href="./homepage.html"><img class="potato" src="mascot.png" style="width:80px; height:73px;"></a>
     </div>
 
-    <h3>Bench Press</h3>
+    <h3>Bench Press: 
+      https://www.youtube.com/watch?v=vcBig73ojpE
+
+    </h3>
+    
       
 </body>
 </html>
