--- a/workoutLog.html
+++ b/workoutLog.html
@@ -27,9 +27,10 @@
       <a href="./homepage.html"><img class="potato" src="mascot.png" style="width:80px; height:73px;"></a>
     </div>
     <div class = "listOfWorkouts">
-        <h2>Workout One</h2>
-        <h2>Workout Two</h2>
-        <h2>Workout Three</h2>
+        <h2>Sample Workout One</h2>
+        <h2>Sample Workout Two</h2>
+        <h2>Sample Workout Three</h2>
+        <h2>Your Workout!</h2>
     </div>
     
   </body>
