--- a/tips.html
+++ b/tips.html
@@ -22,11 +22,11 @@
         <a href="./homepage.html"><img class="potato" src="mascot.png" style="width:80px; height:73px;"></a>
     </div>
     <!-- end navbar -->
-
-    <h3>Bench Press: 
-      https://www.youtube.com/watch?v=vcBig73ojpE
-
-    </h3>
+    <a href="https://www.youtube.com/watch?v=vcBig73ojpE
+    ">
+      <img src="images/360_F_78426476_1b0noG1El961AbjaQ0n0p9hVBaqZ69fy.jpg" alt="Bench Press">
+  </a>
+  
     
       
 </body>
