--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         </ul>
     </div>
 
+    <h3 id="dayCounter">You've worked out for 0 0f 7 days this week!</h3>
+
     <button type="button" onclick="logged()">I worked out today!</button>
 
 </body>
