--- a/tips.html
+++ b/tips.html
@@ -24,7 +24,7 @@
     <!-- end navbar -->
     <a href="https://www.youtube.com/watch?v=vcBig73ojpE
     ">
-      <img src="images/360_F_78426476_1b0noG1El961AbjaQ0n0p9hVBaqZ69fy.jpg" alt="Bench Press">
+      <img class = bench_press src="images/360_F_78426476_1b0noG1El961AbjaQ0n0p9hVBaqZ69fy.jpg" alt="Bench Press">
   </a>
   
     
