--- a/workoutGenerator.html
+++ b/workoutGenerator.html
@@ -23,11 +23,25 @@
     <br>
     <br>
     <br>
-    <h2>Testing</h2>
+  
 
-    <div class = "square"></div>
+    <div class = "pot"></div>
+    <div class = "chatbox"></div>
+    
+    
     <style>
-        .square {
+        .pot{
+            margin-left: auto;
+            margin-right: auto;
+            height: 450px;
+            width: 650px;
+            border:2px;
+            border-style: solid;
+            border-color: blue;
+            border-radius: 25px;
+            padding-top: 30px;
+        }
+        .chatbox {
             margin-left: auto;
             margin-right: auto;
             height: 30px;
