--- a/workoutLog.html
+++ b/workoutLog.html
@@ -30,10 +30,12 @@
     <!-- end navbar -->
 
     <ul class = "listOfWorkouts">
-        <li><a href =>Sample Workout One</a></li>
-        <li><a href =>Sample Workout Two</a></li>
-        <li><a href =>Sample Workout Three</a></li>
-        <li><a href =>Your Workout!</a></li>
+        <li><a href = index.html class = "samples">Sample Workout One</a></li>
+        <li><a href = index.html class = "samples">Sample Workout Two</a></li>
+        <li><a href = index.html class = "samples">Sample Workout Three</a></li>
+        <div class = special>
+        <li><a href = index.html class = "samples">Your Workout!</a></li>
+    </div>
     </div>
     
   </body>
