images into folder

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <li class="div4"><a href = tips.html class="barButton">Workout Links</a></li>
       
         </ul>
-        <a href="./homepage.html"><img class="potato" src="mascot.png" style="width:80px; height:73px;"></a>
+        <a href="./homepage.html"><img class="potato" src="Images/mascot.png" style="width:80px; height:73px;"></a>
       </div>
 <!-- end navbar -->
 
@@ -29,13 +29,13 @@
     <div id="streakCalendarBox">
         <h2>Weekly Workout Streak</h2>
         <ul id="streakCalendar">
-            <li class="streakList"><img src="streakNone.png" id="0"></li>
-            <li class="streakList"><img src="streakNone.png" id="1"></li>
-            <li class="streakList"><img src="streakNone.png" id="2"></li>
-            <li class="streakList"><img src="streakNone.png" id="3"></li>
-            <li class="streakList"><img src="streakNone.png" id="4"></li>
-            <li class="streakList"><img src="streakNone.png" id="5"></li>
-            <li class="streakList"><img src="streakNone.png" id="6"></li>
+            <li class="streakList"><img src="Images/streakNone.png" id="0"></li>
+            <li class="streakList"><img src="Images/streakNone.png" id="1"></li>
+            <li class="streakList"><img src="Images/streakNone.png" id="2"></li>
+            <li class="streakList"><img src="Images/streakNone.png" id="3"></li>
+            <li class="streakList"><img src="Images/streakNone.png" id="4"></li>
+            <li class="streakList"><img src="Images/streakNone.png" id="5"></li>
+            <li class="streakList"><img src="Images/streakNone.png" id="6"></li>
         </ul>
     </div>
 
