--- a/tips.html
+++ b/tips.html
@@ -19,20 +19,20 @@
         <li class="div4"><a href = tips.html class="barButton">Workout Links</a></li>
     
         </ul>
-        <a href="./homepage.html"><img class="potato" src="mascot.png" style="width:80px; height:73px;"></a>
+        <a href="./homepage.html"><img class="potato" src="Images/mascot.png" style="width:80px; height:73px;"></a>
     </div>
     <!-- end navbar -->
     <figure>
     <a href="https://www.youtube.com/watch?v=vcBig73ojpE">
       
-      <img class = bench_press img src="benchpress.jpg" alt="Bench Press">
+      <img class = bench_press img src="Images/benchpress.jpg" alt="Bench Press">
   </a>
   <figcaption>Bench Press</figcaption>
 
 </figure>
 <figure>
   <a href = "https://www.youtube.com/watch?v=SrqOu55lrYU">
-    <img class = incline_bench img src="inclinebench.jpg" alt = "Incline Bench">
+    <img class = incline_bench img src="Images/inclinebench.jpg" alt = "Incline Bench">
   </a>
   <figcaption>Incline Bench</figcaption>
 </figure>
