--- a/taskbar.html
+++ b/taskbar.html
@@ -17,7 +17,7 @@
     <li class="div4"><a href = tips.html class="barButton">Workout Links</a></li>
 
   </ul>
-  <a href="./homepage.html"><img class="potato" src="mascot.png" style="width:80px; height:73px;"></a>
+  <a href="./homepage.html"><img class="potato" src="Images/mascot.png" style="width:80px; height:73px;"></a>
 </div>
 <!-- end navbar -->
 
