--- a/tips.html
+++ b/tips.html
@@ -30,20 +30,21 @@
   </a>
   <figcaption>Bench Press</figcaption>
 </figure>
+
 <figure>
   <a href = "https://www.youtube.com/watch?v=SrqOu55lrYU">
     <img class = incline_bench img src="Images/inclinebench.jpg" alt = "Incline Bench">
   </a>
   <figcaption>Incline Bench</figcaption>
 </figure>
+
 <figure>
   <a href = "https://www.youtube.com/watch?v=qEwKCR5JCog">
-    <img class = dumbbell_press img src = "dumbbell press.jpg" alt = "Dumbbell Press">
+    <img class = dumbbell_press img src = "Images/dumbbell press.jpg" alt = "Dumbbell Press">
   </a>
   <figcaption>
     Dumbbell Press
   </figcaption>
-
 </figure>
     
       
