--- a/yourWorkout.html
+++ b/yourWorkout.html
@@ -5,6 +5,14 @@
     <link rel="stylesheet" href="yourWorkout.css">
 </head>
 <body>
-    
+    <div> <input type = "test" id = "dataID" placeholder = "Enter Data"></div>
+    <button onclick = "saveData()">Save Data</button>
+    <script>
+        function saveData(){
+        var savedWorkoutType = document.getElementById("dataInput").value;
+        localStorage.setItem("workout", savedWorkoutType);
+        console.log(localStorage.getItem("workout"));
+        }
+    </script>
 </body>
 </html>
