--- a/workoutLog.html
+++ b/workoutLog.html
@@ -34,7 +34,7 @@
         <li><a href = index.html class = "samples">Sample Workout Two</a></li>
         <li><a href = index.html class = "samples">Sample Workout Three</a></li>
         <div class = special>
-        <li><a href = index.html class = "samples">Your Workout!</a></li>
+        <li><a href = yourWorkout.html class = "samples">Your Workout!</a></li>
     </div>
     </div>
     
