--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
       </div>
 <!-- end navbar -->
 
-    <h1>Welcome Back, User!</h1>
+    
+    <h2 class = welcome>Welcome back!</h2>
+
 
     <div id="streakCalendarBox">
-        <h2>Weekly Workout Streak</h2>
-        <ul id="streakCalendar">
+        <h2 class = word>Weekly Workout Streak</h2>
+        <ul id="streakCalendar" class = images>
             <li class="streakList"><img src="streakNone.png" id="0"></li>
             <li class="streakList"><img src="streakNone.png" id="1"></li>
             <li class="streakList"><img src="streakNone.png" id="2"></li>
@@ -39,7 +41,7 @@
         </ul>
     </div>
 
-    <h3 id="dayCounter">You've worked out for 0 0f 7 days this week!</h3>
+    <h3 id="dayCounter" class = word>You've worked out for 0 0f 7 days this week!</h3>
 
     <button type="button" onclick="logged()">I worked out today!</button>
     <script src="streakCalendar.js"></script>
