--- a/tips.html
+++ b/tips.html
@@ -50,7 +50,18 @@
   </a>
   
 </figure>
-    
+
+<figure>
+  <a href = "https://www.youtube.com/watch?v=IaJWPqP-Bjo">
+    <img class = overhead_extension img src = "Images/tricepextension.png" alt = "Overhead Tricep Extension">
+  </a>
+</figure>
+
+<figure>
+  <a href = "https://www.youtube.com/watch?v=eGo4IYlbE5g">
+    <img class = pullups img src = "Images/pullups.jpg" alt = "Pullups">
+  </a>
+</figure>
       
 </body>
 </html>
