--- a/yourWorkout.html
+++ b/yourWorkout.html
@@ -24,7 +24,15 @@
     <div> What weight do you want to do that on? <input type = "text" id = "w3" placeholder = "Enter Exercise Weight"></div>
     <div> How many sets do you want to do? <input type = "text" id = "set3" placeholder = "Enter Set Number"></div>
     <button onclick = "saveData()">Save Data</button>
-    <!-- <p>Chosen Focus: <span id = "savedData"></span></p> -->
+
+    <table>
+        Your Workout! 
+        <div class = "titles">
+            <tr> 
+                <th id = "slot0"></th>
+            </tr>
+        </div>
+    </table>
 
     <script type="text/javascript" src="yourWorkout2.js"></script>
 </body>
