--- a/tips.html
+++ b/tips.html
@@ -63,5 +63,24 @@
   </a>
 </figure>
       
+<figure>
+  <a href = "https://www.youtube.com/watch?v=uYumuL_G_V0">
+    <img class = front_squat img src = "Images/front_squad.jpg" alt = "Front Squat">
+  </a>
+</figure>
+
+<figure>
+  <a href = "https://www.youtube.com/watch?v=dY7BmNR7RJk">
+    <img class = hamstring img src = "Images/dumbbellcurl.jpg" alt = "Dumbbell Hamstring Curls">
+  </a>
+</figure>
+
+<figure>
+  <a href = "https://www.youtube.com/watch?v=r4MzxtBKyNE">
+    <img class = deadlift img src = "Images/deadlift.jpg" alt = "Deadlift">
+  </a>
+</figure>
+<p class = "benchpresstext">Click above to learn about the bench press!</p>
+<p class = "inclinebench"> Click above to learn about the incline bench press!</p>
 </body>
 </html>
