--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <li class="div2"><a href = workoutGenerator.html class="barButton">Workout Generator</a></li>
           <li class="div3"><a href = workoutLog.html class = "barButton"> Workout Log</a></li>
           <li class="div4"><a href = tips.html class="barButton">Workout Links</a></li>
+          <li class="div5"><a href = chatbot.html class="barButton">PotatoBot</a></li>
       
         </ul>
         <a href="homepage.html"><img class="potato" src="Images/mascot.png" style="width:80px; height:73px;"></a>
