--- a/workoutLog.html
+++ b/workoutLog.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Workout Log</title>
     <link href="workoutLog.css" rel = "stylesheet">
+    <link href = "taskbar.css" rel = stylesheet>
 </head>
 <style>
     .square {
@@ -23,6 +24,8 @@
         <li class="div2"><a href = workoutGenerator.html class="barButton">Workout Generator</a></li>
         <li class="div3"><a href = workoutLog.html class = "barButton"> Workout Log</a></li>
         <li class="div4"><a href = tips.html class="barButton">Workout Links</a></li>
+        <li class="div5"><a href = chatbot.html class="barButton">PotatoBot</a></li>
+
     
         </ul>
         <a href="./homepage.html"><img class="potato" src="Images/mascot.png" style="width:80px; height:73px;"></a>
