--- a/index.html
+++ b/index.html
@@ -59,5 +59,6 @@
     <!-- TODO: this is not actually supposed to call the logged function until you actually finish logging the workout -->
     
     <script src="streakCalendar.js"></script>
+    <div class="blue-box">This is a blue box.</div>
 </body>
 </html>
