--- a/workoutLog.html
+++ b/workoutLog.html
@@ -32,7 +32,7 @@
     <!-- end navbar -->
 
     <ul class = "listOfWorkouts">
-        <li><a href = index.html class = "samples">Sample Workout One</a></li>
+        <li><a href = sample1.html class = "samples">Sample Workout One</a></li>
         <li><a href = index.html class = "samples">Sample Workout Two</a></li>
         <li><a href = index.html class = "samples">Sample Workout Three</a></li>
         <div class = special>
