--- a/sample1.html
+++ b/sample1.html
@@ -3,6 +3,7 @@
     <head>
         <title>Sample Workout 1!</title>
         <link href="sample1.css" rel = stylesheet>
+        <link href = "taskbar.css" rel = stylesheet>
         
     </head>
     <body>
@@ -48,5 +49,6 @@
             <h3>put sets here</h3>
         </div>
     </div>
+    <a><img class="potat2" src="Images/potat2.png" style="width:400px; height:365;"></a>
     </body>
 </html>
