--- a/sample1.html
+++ b/sample1.html
@@ -22,33 +22,74 @@
 </div>
 
 <!-- end navbar -->
-    <div class="texts">
-        <div class = "titleBar">
-            <h1>
-                Sample One
-            </h1>
-        </div>
+    <!--Shoulders-->    
+    <ul class="info">
+        <li id="shoulder">Shoulders</li> 
+        <li class="vals">Weight</li>
+        <li class="vals">Sets</li>
+        <li class="vals">Reps</li>   
+    </ul>    
 
-        <div class = "workoutFocus">
-            <h2>Workout Focus</h2>
-            <h3>put focus here</h3>
-        </div>
+    <ul class="shoulderPress">
+        <li class="exercise">Shoulder press</li>
+        <li><input type="text" class="num"></li>
+        <li><input type="text" class="num"></li>
+        <li><input type="text" class="num"></li>
+    </ul>
 
-        <div class = "reqReps">
-            <h2>Reccomended Reps</h2>
-            <h3>put reps here</h3>
-        </div>
+    <ul class="shoulderPress">
+        <li class="exercise">Lateral raises</li>
+        <li><input type="text" class="num"></li>
+        <li><input type="text" class="num"></li>
+        <li><input type="text" class="num"></li>
+    </ul>
 
-        <div class = "reqWeight">
-            <h2>Reccomended Weight</h2>
-            <h3>put reps here</h3>
-        </div>
+    <!--Biceps-->
+    <ul class="info">
+        <li id="shoulder">Biceps</li> 
+        <li class="vals">Weight</li>
+        <li class="vals">Sets</li>
+        <li class="vals">Reps</li>   
+    </ul>    
 
-        <div class = "reqSets">
-            <h2>Reccomended Sets</h2>
-            <h3>put sets here</h3>
-        </div>
-    </div>
-    <a><img class="potat2" src="Images/potat2.png" style="width:400px; height:365;"></a>
+    <ul class="shoulderPress">
+        <li class="exercise">Standing Curl</li>
+        <li><input type="text" class="num"></li>
+        <li><input type="text" class="num"></li>
+        <li><input type="text" class="num"></li>
+    </ul>
+
+    <ul class="shoulderPress">
+        <li class="exercise">Seated curl</li>
+        <li><input type="text" class="num"></li>
+        <li><input type="text" class="num"></li>
+        <li><input type="text" class="num"></li>
+    </ul>
+
+    <!--Triceps-->
+    <ul class="info">
+        <li id="shoulder">Triceps</li> 
+        <li class="vals">Weight</li>
+        <li class="vals">Sets</li>
+        <li class="vals">Reps</li>   
+    </ul>    
+    
+    <ul class="shoulderPress">
+        <li class="exercise">Skull Crushers</li>
+        <li><input type="text" class="num"></li>
+        <li><input type="text" class="num"></li>
+        <li><input type="text" class="num"></li>
+    </ul>
+
+    <ul class="shoulderPress">
+        <li class="exercise">Extensions</li>
+        <li><input type="text" class="num"></li>
+        <li><input type="text" class="num"></li>
+        <li><input type="text" class="num"></li>
+    </ul>
+
+    
+
+
     </body>
 </html>
