--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
     
     <script src="streakCalendar.js"></script>
     <div class="blue-box">Goals</div>
-    <div class="box">placeholder</div>
+    <div class="box"></div>
 </body>
 </html>
