--- a/sample1.html
+++ b/sample1.html
@@ -23,6 +23,7 @@
 
 <!-- end navbar -->
     <!--Shoulders-->    
+    <div>
     <ul class="info">
         <li id="shoulder">Shoulders</li> 
         <li class="vals">Weight</li>
@@ -44,51 +45,18 @@
         <li><input type="text" class="num"></li>
     </ul>
 
-    <!--Biceps-->
-    <ul class="info">
-        <li id="shoulder">Biceps</li> 
-        <li class="vals">Weight</li>
-        <li class="vals">Sets</li>
-        <li class="vals">Reps</li>   
-    </ul>    
-
     <ul class="shoulderPress">
-        <li class="exercise">Standing Curl</li>
+        <li><input type="text" id="name"></li>
         <li><input type="text" class="num"></li>
         <li><input type="text" class="num"></li>
         <li><input type="text" class="num"></li>
+        <li><input type="button" class = "num"></li>
     </ul>
 
-    <ul class="shoulderPress">
-        <li class="exercise">Seated curl</li>
-        <li><input type="text" class="num"></li>
-        <li><input type="text" class="num"></li>
-        <li><input type="text" class="num"></li>
-    </ul>
+    <div>
+        <a href="newExercise.html" id="newEx"><h3 id="newE">Add New Exercise</h3></a>        
+    </div>
 
-    <!--Triceps-->
-    <ul class="info">
-        <li id="shoulder">Triceps</li> 
-        <li class="vals">Weight</li>
-        <li class="vals">Sets</li>
-        <li class="vals">Reps</li>   
-    </ul>    
-    
-    <ul class="shoulderPress">
-        <li class="exercise">Skull Crushers</li>
-        <li><input type="text" class="num"></li>
-        <li><input type="text" class="num"></li>
-        <li><input type="text" class="num"></li>
-    </ul>
-
-    <ul class="shoulderPress">
-        <li class="exercise">Extensions</li>
-        <li><input type="text" class="num"></li>
-        <li><input type="text" class="num"></li>
-        <li><input type="text" class="num"></li>
-    </ul>
-
-    
 
 
     </body>
