added local storage functionality

--- a/sample1.html
+++ b/sample1.html
@@ -23,7 +23,7 @@
 
 <!-- end navbar -->
     <!--Shoulders-->    
-    <div>
+    <div id="wk">
     <ul class="info">
         <li id="shoulder">Shoulders</li> 
         <li class="vals">Weight</li>
@@ -31,7 +31,7 @@
         <li class="vals">Reps</li>   
     </ul>    
 
-    <ul class="shoulderPress">
+    <!-- <ul class="shoulderPress">
         <li class="exercise">Shoulder press</li>
         <li><input type="text" class="num"></li>
         <li><input type="text" class="num"></li>
@@ -43,18 +43,20 @@
         <li><input type="text" class="num"></li>
         <li><input type="text" class="num"></li>
         <li><input type="text" class="num"></li>
-    </ul>
+    </ul> -->
 
-    <ul class="shoulderPress">
+    <!-- <ul class="shoulderPress">
         <li><input type="text" id="name"></li>
         <li><input type="text" class="num"></li>
         <li><input type="text" class="num"></li>
         <li><input type="text" class="num"></li>
         <li><input type="button" class = "num"></li>
-    </ul>
+    </ul> -->
+    </div>
 
     <div>
-        <a href="newExercise.html" id="newEx"><h3 id="newE">Add New Exercise</h3></a>        
+        <h3 onclick = "addNewExercise()" id = "newE"> Add New Exercise</h3>
+        <script src="sample1.js"></script>        
     </div>
 
 
