--- a/workoutLog.html
+++ b/workoutLog.html
@@ -31,12 +31,14 @@
     </div>
     <!-- end navbar -->
 
+    <h2 id="choose">Choose your workout</h2>
+    
     <ul class = "listOfWorkouts">
-        <li><a href = sample1.html class = "samples">Sample Workout One</a></li>
-        <li><a href = index.html class = "samples">Sample Workout Two</a></li>
-        <li><a href = index.html class = "samples">Sample Workout Three</a></li>
+        <li><a href = sample1.html class = "samples">Workout 1: Shoulder and Arms</a></li><br>
+        <li><a href = index.html class = "samples">Workout 2: Chest and Back</a></li><br>
+        <li><a href = index.html class = "samples">Workout 3: Legs</a></li><br>
         <div class = special>
-        <li><a href = yourWorkout.html class = "samples">Your Workout!</a></li>
+        <li><a href = yourWorkout.html class = "samples">Add New Workout</a></li>
     </div>
     </div>
     
