--- a/workoutLog.html
+++ b/workoutLog.html
@@ -39,7 +39,8 @@
         <li><a href = index.html class = "samples">Workout 3: Legs</a></li><br>
         <div class = special>
         <li><a href = yourWorkout.html class = "samples">Add New Workout</a></li>
-    </div>
+    <div class="potat">
+      <img src="Images/potat2.png" alt="Mascot Without Arms">
     </div>
     
   </body>
