--- a/sample1.html
+++ b/sample1.html
@@ -25,7 +25,7 @@
     <!--Shoulders-->    
     <div id="wk">
     <ul class="info">
-        <li id="shoulder">Shoulders</li> 
+        <li id="shoulder">Workout</li> 
         <li class="vals">Weight</li>
         <li class="vals">Sets</li>
         <li class="vals">Reps</li>   
