--- a/workoutLog.html
+++ b/workoutLog.html
@@ -35,8 +35,8 @@
     
     <ul class = "listOfWorkouts">
         <li><a href = sample1.html class = "samples">Workout 1: Shoulder and Arms</a></li><br>
-        <li><a href = index.html class = "samples">Workout 2: Chest and Back</a></li><br>
-        <li><a href = index.html class = "samples">Workout 3: Legs</a></li><br>
+        <li><a href = sample2.html class = "samples">Workout 2: Chest and Back</a></li><br>
+        <li><a href = sample3.html class = "samples">Workout 3: Legs</a></li><br>
         <div class = special>
         <li><a href = yourWorkout.html class = "samples">Add New Workout</a></li>
     <div class="potat">
