fixed workout button

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
     <h3 id="dayCounter" class = word>You've worked out for 0 0f 7 days this week!</h3>
     <a href="workoutLog.html">
         <!-- TODO: this is not actually supposed to call the logged function until you actually finish logging the workout -->
-        <button type="button" onclick="logged()" class = button>Log Today's Workout</button>
+        <button type="button" class="button1" onclick="logged()">Log Today's Workout</button>
     </a>
+    
     </div>
 
 
